firmware/lib/control-table/tests/ui/enum_on_struct.stderr
error: Enum can only be derived for enums
 --> tests/ui/enum_on_struct.rs:4:1
  |
4 | / #[repr(u8)]
5 | | struct NotAnEnum {
6 | |     x: u8,
7 | | }
  | |_^

error: `#[repr(u8)]` attribute cannot be used on structs
 --> tests/ui/enum_on_struct.rs:4:1
  |
4 | #[repr(u8)]
  | ^^^^^^^^^^^
  |
  = help: `#[repr(u8)]` can only be applied to enums
