firmware/lib/control-table/tests/ui/enum_on_struct.rs
use control_table::Enum;

#[derive(Enum)]
#[repr(u8)]
struct NotAnEnum {
    x: u8,
}

fn main() {}
